tests/baselines/reference/invalidAssignmentsToVoid.errors.txt
==== tests/cases/compiler/invalidAssignmentsToVoid.ts (10 errors) ====
    var x: void;
    x = 1;
    ~
!!! invalidAssignmentsToVoid.ts(2,1): error TS2011: Type 'number' is not assignable to type 'void'.
    x = true;
    ~
!!! invalidAssignmentsToVoid.ts(3,1): error TS2011: Type 'boolean' is not assignable to type 'void'.
    x = '';
    ~
!!! invalidAssignmentsToVoid.ts(4,1): error TS2011: Type 'string' is not assignable to type 'void'.
    x = {}
    ~
!!! invalidAssignmentsToVoid.ts(5,1): error TS2011: Type '{}' is not assignable to type 'void'.
    
    class C { foo: string; }
    var c: C;
    x = C;
    ~
!!! invalidAssignmentsToVoid.ts(9,1): error TS2011: Type 'typeof C' is not assignable to type 'void'.
    x = c;
    ~
!!! invalidAssignmentsToVoid.ts(10,1): error TS2011: Type 'C' is not assignable to type 'void'.
    
    interface I { foo: string; }
    var i: I;
    x = i;
    ~
!!! invalidAssignmentsToVoid.ts(14,1): error TS2011: Type 'I' is not assignable to type 'void'.
    
    module M { export var x = 1; }
    x = M;
    ~
!!! invalidAssignmentsToVoid.ts(17,1): error TS2011: Type 'typeof M' is not assignable to type 'void'.
    
    function f<T>(a: T) {
        x = a;
        ~
!!! invalidAssignmentsToVoid.ts(20,5): error TS2011: Type 'T' is not assignable to type 'void'.
    }
    x = f;
    ~
!!! invalidAssignmentsToVoid.ts(22,1): error TS2011: Type 'typeof f' is not assignable to type 'void'.